--- a/.env
+++ b/.env
@@ -5,19 +5,27 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+/*DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=iberobrinde
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=*/
+
+DB_CONNECTION=mysql
+DB_HOST=eu-cdbr-west-02.cleardb.net
+DB_PORT=3306
+DB_DATABASE=heroku_bfadbeb5b9fb8db
+DB_USERNAME=b18760fe18cbbd
+DB_PASSWORD=9ceea912
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
-
+	
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
