--- a/.env
+++ b/.env
@@ -3,14 +3,7 @@ APP_ENV=local
 APP_KEY=base64:rRZpnliCuxXU0cBz7BVnBwkstPi5sPRhSVrguQhKUs4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
-
-/*DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=iberobrinde
-DB_USERNAME=root
-DB_PASSWORD=*/
+APP_URL=www.iberobrinde.pt
 
 DB_CONNECTION=mysql
 DB_HOST=eu-cdbr-west-02.cleardb.net
