--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=IberoBrinde
 APP_ENV=local
 APP_KEY=base64:rRZpnliCuxXU0cBz7BVnBwkstPi5sPRhSVrguQhKUs4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=www.iberobrinde.pt
+APP_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=eu-cdbr-west-02.cleardb.net
@@ -23,12 +23,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+__MAIL_DRIVER=smtp
+__MAIL_HOST=smtp.mailtrap.io
+__MAIL_PORT=2525
+__MAIL_USERNAME=null
+__MAIL_PASSWORD=null
+__MAIL_ENCRYPTION=null
+
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=marcomendes999@gmail.com
+MAIL_PASSWORD=Lilimarco29
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME="Ibero Brinde"
+
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
