--- a/.env
+++ b/.env
@@ -5,12 +5,19 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=
 
+__DB_CONNECTION=mysql
+__DB_HOST=eu-cdbr-west-02.cleardb.net
+__DB_PORT=3306
+__DB_DATABASE=heroku_bfadbeb5b9fb8db
+__DB_USERNAME=b18760fe18cbbd
+__DB_PASSWORD=9ceea912
+
 DB_CONNECTION=mysql
-DB_HOST=eu-cdbr-west-02.cleardb.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=heroku_bfadbeb5b9fb8db
-DB_USERNAME=b18760fe18cbbd
-DB_PASSWORD=9ceea912
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 BROADCAST_DRIVER=log
