--- a/.env
+++ b/.env
@@ -39,13 +39,12 @@ __MAIL_ENCRYPTION=null
 
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=marcomendes999@gmail.com
-MAIL_PASSWORD=Lilimarco29
+MAIL_HOST=de15.fcomet.com
+MAIL_PORT=587 
+MAIL_USERNAME=marketing@iberobrinde.com
+MAIL_PASSWORD=[mud}svVCQDW
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="Ibero Brinde"
-
 
 
 PUSHER_APP_ID=
